fixed whitespace in mobile from bottom cloud exceeding 100 percent

--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ a {
 }
 .bottom-cloud {
     position: absolute;
-    left: 300px;
+    left: 25%;
     bottom: 250px;
   
   }
